# flibusta-telegram-bot

./: .dockerignore  .env (template)  .env.save  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: auth.py  deps.py  main.py  schemas.py
api/routers/: audiobooks.py  auth_router.py  books.py  downloads.py  library.py  profile.py  search.py
src/: akniga.py  bookmate.py  config.py  custom_logging.py  database.py  flib.py  rt_cache.py  rutracker.py  rutracker_downloader.py  srv.py  tg_bot.py  tg_bot_audio.py  tg_bot_cache.py  tg_bot_download.py  tg_bot_favorites.py  tg_bot_helpers.py  tg_bot_nav.py  tg_bot_presentation.py  tg_bot_rutracker.py  tg_bot_search.py  tg_bot_ui.py  tg_bot_views.py
tests/: conftest.py  test_database.py  test_flib.py  test_reading_progress.py  test_rutracker_cache.py  test_tg_bot_cache.py  test_tg_bot_presentation.py  test_tg_bot_ui_nav.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/audio/: AudioPlayer.tsx  MiniPlayer.tsx
web/src/components/books/: BookCard.tsx  BookCoverCard.tsx  HorizontalCarousel.tsx  ShelfFilter.tsx  SkeletonCard.tsx
web/src/contexts/: AudioPlayerContext.tsx
web/src/hooks/: useTelegram.ts
web/src/lib/: animations.ts  authSession.ts
web/src/pages/: AudiobookDetailPage.tsx  AudiobooksPage.tsx  BookDetailPage.tsx  BookReaderPage.tsx  DiscoveryPage.tsx  DownloadsPage.tsx  LibraryPage.tsx  LoginPage.tsx  ProfilePage.tsx  SearchPage.tsx
web/src/store/: auth.ts
web/src/styles/: globals.css
(+3 files in other folders)
