[tool.poetry]
name = "flibusta-telegram-bot"
version = "0.1.0"
description = "telegram bot for download books from flibusta"
authors = ["Evgeniy Korzunov <korzunov.e.v@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = {version = "^21.9", extras = ["job-queue"]}
python-dotenv = "^1.0.1"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
json-log-formatter = "^1.1"
pycryptodome = "^3.20"
m3u8 = "^3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"src/srv.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
